Bug 190861 - crash when expanding media device in collection browser
Summary: crash when expanding media device in collection browser
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Collection Browser (other bugs)
Version First Reported In: 2.1-SVN
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
: 192579 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-04-27 20:27 UTC by Mikko C.
Modified: 2009-05-13 18:49 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mikko C. 2009-04-27 20:27:44 UTC
Version:           2.1-SVN (using 4.2.70 (KDE 4.2.70 (KDE 4.3 >= 20090415)), Gentoo)
Compiler:          x86_64-pc-linux-gnu-gcc
OS:                Linux (x86_64) release 2.6.30-rc3

100% reproducible here - using trunk.
Steps to reproduce:

1) A media device must be plugged in and have some songs on it. It happens with my MTP, don't know about Ipods.
2) Sort the Collection Browser by: Genre / Artist.
3) Type something in the search bar.
4) Click the Media device to expand it -> crash


About 2). The crash doesn't happen if "Artist / Album" is chosen. Genre seems to trigger this crash.



Application and System information:
------
KDE Version: 4.2.70 (KDE 4.2.70 (KDE 4.3 >= 20090415))
Qt Version: 4.5.0
Operating System: Linux 2.6.30-rc3 x86_64
Application that crashed: amarok
Version of the application: 2.1-SVN
------


Backtrace:
------
Application: Amarok (amarok), signal: Segmentation fault
[Current thread is 0 (LWP 27065)]

Thread 17 (Thread 0x4131f950 (LWP 27066)):
#0  0x00007fe542cde02d in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fe534dbe08e in metronom_sync_loop () from /usr/lib64/libxine.so.1
#2  0x00007fe542cda037 in start_thread () from /lib/libpthread.so.0
#3  0x00007fe5422a8cbd in clone () from /lib/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 16 (Thread 0x408cc950 (LWP 27067)):
#0  0x00007fe542cdeed6 in pthread_once () from /lib/libpthread.so.0
#1  0x00007fe542f4d091 in QThreadData::current () at thread/qthread_unix.cpp:106
#2  0x00007fe542f4a5b6 in QThread::currentThread () at thread/qthread.cpp:357
#3  0x00007fe543057a0e in QEventDispatcherUNIX::activateTimers (this=0x2762740) at kernel/qeventdispatcher_unix.cpp:844
#4  0x00007fe5430583a8 in QEventDispatcherUNIX::processEvents (this=0x2762740, flags={i = 1082965824}) at kernel/qeventdispatcher_unix.cpp:908
#5  0x00007fe54302cdc2 in QEventLoop::processEvents (this=<value optimized out>, flags={i = 1082965872}) at kernel/qeventloop.cpp:149
#6  0x00007fe54302cf55 in QEventLoop::exec (this=0x408cbfb0, flags={i = 1082965952}) at kernel/qeventloop.cpp:196
#7  0x00007fe542f4a51c in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:481
#8  0x00007fe5350155bc in Phonon::Xine::XineThread::run () from /usr/lib64/kde4/plugins/phonon_backend/phonon_xine.so
#9  0x00007fe542f4d829 in QThreadPrivate::start (arg=0x2656c50) at thread/qthread_unix.cpp:189
#10 0x00007fe542cda037 in start_thread () from /lib/libpthread.so.0
#11 0x00007fe5422a8cbd in clone () from /lib/libc.so.6
#12 0x0000000000000000 in ?? ()

Thread 15 (Thread 0x41b20950 (LWP 27070)):
#0  0x00007fe5422a03b6 in poll () from /lib/libc.so.6
#1  0x00007fe530c28ab8 in ao_alsa_handle_event_thread () from /usr/lib64/xine/plugins/1.26/xineplug_ao_out_alsa.so
#2  0x00007fe542cda037 in start_thread () from /lib/libpthread.so.0
#3  0x00007fe5422a8cbd in clone () from /lib/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 14 (Thread 0x42321950 (LWP 27071)):
#0  0x00007fe542cddda9 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fe534dcbe80 in fifo_peek_int () from /usr/lib64/libxine.so.1
#2  0x00007fe534dcd81c in ao_loop () from /usr/lib64/libxine.so.1
#3  0x00007fe542cda037 in start_thread () from /lib/libpthread.so.0
#4  0x00007fe5422a8cbd in clone () from /lib/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 13 (Thread 0x42b22950 (LWP 27072)):
#0  0x00007fe542cddda9 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fe534dcbe80 in fifo_peek_int () from /usr/lib64/libxine.so.1
#2  0x00007fe534dcd81c in ao_loop () from /usr/lib64/libxine.so.1
#3  0x00007fe542cda037 in start_thread () from /lib/libpthread.so.0
#4  0x00007fe5422a8cbd in clone () from /lib/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 12 (Thread 0x43323950 (LWP 27074)):
#0  0x00007fe542cddda9 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fe53021a49d in os_event_wait_low () from /usr/kde/live/lib64/kde4/libamarok_collection-sqlcollection.so
#2  0x00007fe530217769 in os_aio_simulated_handle () from /usr/kde/live/lib64/kde4/libamarok_collection-sqlcollection.so
#3  0x00007fe5301dbb83 in fil_aio_wait () from /usr/kde/live/lib64/kde4/libamarok_collection-sqlcollection.so
#4  0x00007fe53007e900 in io_handler_thread () from /usr/kde/live/lib64/kde4/libamarok_collection-sqlcollection.so
#5  0x00007fe542cda037 in start_thread () from /lib/libpthread.so.0
#6  0x00007fe5422a8cbd in clone () from /lib/libc.so.6
#7  0x0000000000000000 in ?? ()

Thread 11 (Thread 0x43b24950 (LWP 27075)):
#0  0x00007fe542cddda9 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fe53021a49d in os_event_wait_low () from /usr/kde/live/lib64/kde4/libamarok_collection-sqlcollection.so
#2  0x00007fe530217769 in os_aio_simulated_handle () from /usr/kde/live/lib64/kde4/libamarok_collection-sqlcollection.so
#3  0x00007fe5301dbb83 in fil_aio_wait () from /usr/kde/live/lib64/kde4/libamarok_collection-sqlcollection.so
#4  0x00007fe53007e900 in io_handler_thread () from /usr/kde/live/lib64/kde4/libamarok_collection-sqlcollection.so
#5  0x00007fe542cda037 in start_thread () from /lib/libpthread.so.0
#6  0x00007fe5422a8cbd in clone () from /lib/libc.so.6
#7  0x0000000000000000 in ?? ()

Thread 10 (Thread 0x44325950 (LWP 27076)):
#0  0x00007fe542cddda9 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fe53021a49d in os_event_wait_low () from /usr/kde/live/lib64/kde4/libamarok_collection-sqlcollection.so
#2  0x00007fe530217769 in os_aio_simulated_handle () from /usr/kde/live/lib64/kde4/libamarok_collection-sqlcollection.so
#3  0x00007fe5301dbb83 in fil_aio_wait () from /usr/kde/live/lib64/kde4/libamarok_collection-sqlcollection.so
#4  0x00007fe53007e900 in io_handler_thread () from /usr/kde/live/lib64/kde4/libamarok_collection-sqlcollection.so
#5  0x00007fe542cda037 in start_thread () from /lib/libpthread.so.0
#6  0x00007fe5422a8cbd in clone () from /lib/libc.so.6
#7  0x0000000000000000 in ?? ()

Thread 9 (Thread 0x44b26950 (LWP 27077)):
#0  0x00007fe542cddda9 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fe53021a49d in os_event_wait_low () from /usr/kde/live/lib64/kde4/libamarok_collection-sqlcollection.so
#2  0x00007fe530217769 in os_aio_simulated_handle () from /usr/kde/live/lib64/kde4/libamarok_collection-sqlcollection.so
#3  0x00007fe5301dbb83 in fil_aio_wait () from /usr/kde/live/lib64/kde4/libamarok_collection-sqlcollection.so
#4  0x00007fe53007e900 in io_handler_thread () from /usr/kde/live/lib64/kde4/libamarok_collection-sqlcollection.so
#5  0x00007fe542cda037 in start_thread () from /lib/libpthread.so.0
#6  0x00007fe5422a8cbd in clone () from /lib/libc.so.6
#7  0x0000000000000000 in ?? ()

Thread 8 (Thread 0x45b28950 (LWP 27079)):
#0  0x00007fe5422a2422 in select () from /lib/libc.so.6
#1  0x00007fe53021a8db in os_thread_sleep () from /usr/kde/live/lib64/kde4/libamarok_collection-sqlcollection.so
#2  0x00007fe53007b458 in srv_lock_timeout_and_monitor_thread () from /usr/kde/live/lib64/kde4/libamarok_collection-sqlcollection.so
#3  0x00007fe542cda037 in start_thread () from /lib/libpthread.so.0
#4  0x00007fe5422a8cbd in clone () from /lib/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 7 (Thread 0x46329950 (LWP 27080)):
#0  0x00007fe5422a2422 in select () from /lib/libc.so.6
#1  0x00007fe53021a8db in os_thread_sleep () from /usr/kde/live/lib64/kde4/libamarok_collection-sqlcollection.so
#2  0x00007fe53007a23a in srv_error_monitor_thread () from /usr/kde/live/lib64/kde4/libamarok_collection-sqlcollection.so
#3  0x00007fe542cda037 in start_thread () from /lib/libpthread.so.0
#4  0x00007fe5422a8cbd in clone () from /lib/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 6 (Thread 0x46b2a950 (LWP 27081)):
#0  0x00007fe542cddda9 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fe53021a49d in os_event_wait_low () from /usr/kde/live/lib64/kde4/libamarok_collection-sqlcollection.so
#2  0x00007fe53007947e in srv_master_thread () from /usr/kde/live/lib64/kde4/libamarok_collection-sqlcollection.so
#3  0x00007fe542cda037 in start_thread () from /lib/libpthread.so.0
#4  0x00007fe5422a8cbd in clone () from /lib/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 5 (Thread 0x4732b950 (LWP 27082)):
#0  0x00007fe542cddda9 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fe542f4e3e5 in QWaitCondition::wait (this=0x30a0ad8, mutex=0x30a2e70, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:87
#2  0x00007fe53f465cc7 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned () from /usr/kde/live/lib64/libthreadweaver.so.4
#3  0x00007fe53f4690e8 in ThreadWeaver::WorkingHardState::applyForWork () from /usr/kde/live/lib64/libthreadweaver.so.4
#4  0x00007fe53f469101 in ThreadWeaver::WorkingHardState::applyForWork () from /usr/kde/live/lib64/libthreadweaver.so.4
#5  0x00007fe53f469101 in ThreadWeaver::WorkingHardState::applyForWork () from /usr/kde/live/lib64/libthreadweaver.so.4
#6  0x00007fe53f469101 in ThreadWeaver::WorkingHardState::applyForWork () from /usr/kde/live/lib64/libthreadweaver.so.4
#7  0x00007fe53f467634 in ThreadWeaver::ThreadRunHelper::run () from /usr/kde/live/lib64/libthreadweaver.so.4
#8  0x00007fe53f467755 in ThreadWeaver::Thread::run () from /usr/kde/live/lib64/libthreadweaver.so.4
#9  0x00007fe542f4d829 in QThreadPrivate::start (arg=0x30ad2c0) at thread/qthread_unix.cpp:189
#10 0x00007fe542cda037 in start_thread () from /lib/libpthread.so.0
#11 0x00007fe5422a8cbd in clone () from /lib/libc.so.6
#12 0x0000000000000000 in ?? ()

Thread 4 (Thread 0x47b2c950 (LWP 27083)):
#0  0x00007fe542cddda9 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fe542f4e3e5 in QWaitCondition::wait (this=0x30a0ad8, mutex=0x30a2e70, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:87
#2  0x00007fe53f465cc7 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned () from /usr/kde/live/lib64/libthreadweaver.so.4
#3  0x00007fe53f4690e8 in ThreadWeaver::WorkingHardState::applyForWork () from /usr/kde/live/lib64/libthreadweaver.so.4
#4  0x00007fe53f469101 in ThreadWeaver::WorkingHardState::applyForWork () from /usr/kde/live/lib64/libthreadweaver.so.4
#5  0x00007fe53f467634 in ThreadWeaver::ThreadRunHelper::run () from /usr/kde/live/lib64/libthreadweaver.so.4
#6  0x00007fe53f467755 in ThreadWeaver::Thread::run () from /usr/kde/live/lib64/libthreadweaver.so.4
#7  0x00007fe542f4d829 in QThreadPrivate::start (arg=0x357dab0) at thread/qthread_unix.cpp:189
#8  0x00007fe542cda037 in start_thread () from /lib/libpthread.so.0
#9  0x00007fe5422a8cbd in clone () from /lib/libc.so.6
#10 0x0000000000000000 in ?? ()

Thread 3 (Thread 0x4832d950 (LWP 27084)):
#0  0x00007fe542cddda9 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fe542f4e3e5 in QWaitCondition::wait (this=0x30a0ad8, mutex=0x30a2e70, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:87
#2  0x00007fe53f465cc7 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned () from /usr/kde/live/lib64/libthreadweaver.so.4
#3  0x00007fe53f4690e8 in ThreadWeaver::WorkingHardState::applyForWork () from /usr/kde/live/lib64/libthreadweaver.so.4
#4  0x00007fe53f469101 in ThreadWeaver::WorkingHardState::applyForWork () from /usr/kde/live/lib64/libthreadweaver.so.4
#5  0x00007fe53f469101 in ThreadWeaver::WorkingHardState::applyForWork () from /usr/kde/live/lib64/libthreadweaver.so.4
#6  0x00007fe53f467634 in ThreadWeaver::ThreadRunHelper::run () from /usr/kde/live/lib64/libthreadweaver.so.4
#7  0x00007fe53f467755 in ThreadWeaver::Thread::run () from /usr/kde/live/lib64/libthreadweaver.so.4
#8  0x00007fe542f4d829 in QThreadPrivate::start (arg=0x357f730) at thread/qthread_unix.cpp:189
#9  0x00007fe542cda037 in start_thread () from /lib/libpthread.so.0
#10 0x00007fe5422a8cbd in clone () from /lib/libc.so.6
#11 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x48b2e950 (LWP 27085)):
[KCrash Handler]
#5  0x00007fe5449f3115 in OrContainerMemoryFilter::filterMatches (this=0xd0f0f70, track=@0xd0e6730) at /home/mikko/amarok/src/collection/support/MemoryFilter.cpp:173
#6  0x00007fe5449f3129 in OrContainerMemoryFilter::filterMatches (this=0x37db820, track=@0xd0e6730) at /home/mikko/amarok/src/collection/support/MemoryFilter.cpp:173
#7  0x00007fe5449f3129 in OrContainerMemoryFilter::filterMatches (this=0x309e440, track=@0xd0e6730) at /home/mikko/amarok/src/collection/support/MemoryFilter.cpp:173
#8  0x00007fe5449f3227 in AndContainerMemoryFilter::filterMatches (this=0x3bebd30, track=@0xd0e6730) at /home/mikko/amarok/src/collection/support/MemoryFilter.cpp:150
#9  0x00007fe5449f9273 in MemoryQueryMaker::runQuery (this=0xd7d9fc0) at /home/mikko/amarok/src/collection/support/MemoryQueryMaker.cpp:172
#10 0x00007fe544a043af in QueryJob::run (this=0x37c2320) at /home/mikko/amarok/src/collection/support/MemoryQueryMaker.cpp:54
#11 0x00007fe53f468504 in ThreadWeaver::JobRunHelper::runTheJob () from /usr/kde/live/lib64/libthreadweaver.so.4
#12 0x00007fe53f4686f8 in ThreadWeaver::Job::execute () from /usr/kde/live/lib64/libthreadweaver.so.4
#13 0x00007fe53f4675ef in ThreadWeaver::ThreadRunHelper::run () from /usr/kde/live/lib64/libthreadweaver.so.4
#14 0x00007fe53f467755 in ThreadWeaver::Thread::run () from /usr/kde/live/lib64/libthreadweaver.so.4
#15 0x00007fe542f4d829 in QThreadPrivate::start (arg=0x291aee0) at thread/qthread_unix.cpp:189
#16 0x00007fe542cda037 in start_thread () from /lib/libpthread.so.0
#17 0x00007fe5422a8cbd in clone () from /lib/libc.so.6
#18 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fe545684760 (LWP 27065)):
#0  0x00007fe542cde02d in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fe542f4cdf5 in thread_sleep (ti=0x7fff4d6c3730) at thread/qthread_unix.cpp:298
#2  0x00007fe542f4cf4e in QThread::msleep (msecs=200) at thread/qthread_unix.cpp:324
#3  0x00007fe5350309da in Phonon::Xine::Backend::~Backend () from /usr/lib64/kde4/plugins/phonon_backend/phonon_xine.so
#4  0x00007fe53efc90d0 in Phonon::FactoryPrivate::~FactoryPrivate () from /usr/lib/libphonon.so.4
#5  0x00007fe54220ddad in exit () from /lib/libc.so.6
#6  0x00007fe543c01308 in qt_xio_errhandler () at kernel/qapplication_x11.cpp:707
#7  0x00007fe5450840e8 in KApplication::xioErrhandler () from /usr/kde/live/lib64/libkdeui.so.5
#8  0x00007fe541ac3024 in _XIOError () from /usr/lib/libX11.so.6
#9  0x00007fe541aca29f in process_responses () from /usr/lib/libX11.so.6
#10 0x00007fe541acabc5 in _XEventsQueued () from /usr/lib/libX11.so.6
#11 0x00007fe541ab3a13 in XEventsQueued () from /usr/lib/libX11.so.6
#12 0x00007fe543c33a77 in QEventDispatcherX11::processEvents (this=0x25c6340, flags={i = 1298939136}) at kernel/qeventdispatcher_x11.cpp:79
#13 0x00007fe54302cdc2 in QEventLoop::processEvents (this=<value optimized out>, flags={i = 1298939184}) at kernel/qeventloop.cpp:149
#14 0x00007fe54302cf55 in QEventLoop::exec (this=0x7fff4d6c3d70, flags={i = 1298939264}) at kernel/qeventloop.cpp:196
#15 0x00007fe543031c0e in QCoreApplication::exec () at kernel/qcoreapplication.cpp:880
#16 0x000000000040378d in main (argc=2, argv=0x7fff4d6c4fa8) at /home/mikko/amarok/src/main.cpp:128
Comment 1 Mikko C. 2009-04-27 20:31:24 UTC
xevix, even if this crash isn't strictly related to your code, maybe you can try and see if you can reproduce it?
Comment 2 Mark Kretschmann 2009-04-27 20:41:36 UTC
SVN commit 960006 by markey:

Fix potential crash: Dereferencing 0-pointer.

BUG: 190861

 M  +1 -1      MemoryFilter.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=960006
Comment 3 Dario Andres 2009-05-13 18:49:24 UTC
*** Bug 192579 has been marked as a duplicate of this bug. ***