Fix potential crash: Dereferencing 0-pointer.

BUG: 190861

svn path=/trunk/extragear/multimedia/amarok/; revision=960006